# saturn

./: README  README.md  flake.nix  justfile  mycfg.cabal
nix/: formatter.nix
src/: Main.hs
src/CLI/: Commands.hs  Help.hs  Parser.hs
src/Config/: Defaults.hs  Parser.hs  Schema.hs  Types.hs  Validator.hs
src/Core/: Apply.hs  Diff.hs  Engine.hs  Planner.hs  Rollback.hs
src/Errors/: Recovery.hs  Render.hs  Types.hs
src/Filesystem/: Atomic.hs  Copy.hs  Paths.hs  Permissions.hs  Symlink.hs
src/Logging/: Events.hs  Format.hs  Logger.hs
src/Modules/: Loader.hs  Registry.hs  Resolver.hs
src/State/: Generations.hs  History.hs  Manifest.hs  Snapshot.hs  Store.hs
src/Utils/: Hash.hs  Process.hs  Text.hs  Time.hs
test/: Spec.hs
test/Mycfg/Config/: ParserSpec.hs  ValidatorSpec.hs
test/Mycfg/Core/: DiffSpec.hs
test/Mycfg/Utils/: TextSpec.hs
