cabal-version:      3.0

name:               saturn
version:            0.1.0.0
synopsis:           A declarative configuration management system
description:
    A declarative configuration manager inspired by NixOS,
    Home Manager, GNU Stow, and modern infrastructure-as-code tools.

category:           System
homepage:           https://github.com/playfairs/saturn
bug-reports:        https://github.com/playfairs/saturn/issues

author:             playfairs
maintainer:         root@playfairs.cc
copyright:          2026 playfairs

license:            GPL-3.0-or-later
license-file:       LICENSE

build-type:         Simple

extra-source-files:
    README

-- library
--     exposed-modules:
--         Mycfg.CLI.Commands
--         Mycfg.CLI.Help
--         Mycfg.CLI.Parser
--         Mycfg.Config.Defaults
--         Mycfg.Config.Parser
--         Mycfg.Config.Schema
--         Mycfg.Config.Types
--         Mycfg.Config.Validator
--         Mycfg.Core.Apply
--         Mycfg.Core.Diff
--         Mycfg.Core.Engine
--         Mycfg.Core.Planner
--         Mycfg.Core.Rollback
--         Mycfg.Errors.Recovery
--         Mycfg.Errors.Render
--         Mycfg.Errors.Types
--         Mycfg.Filesystem.Atomic
--         Mycfg.Filesystem.Copy
--         Mycfg.Filesystem.Paths
--         Mycfg.Filesystem.Permissions
--         Mycfg.Filesystem.Symlink
--         Mycfg.Logging.Events
--         Mycfg.Logging.Format
--         Mycfg.Logging.Logger
--         Mycfg.Modules.Loader
--         Mycfg.Modules.Registry
--         Mycfg.Modules.Resolver
--         Mycfg.State.Generations
--         Mycfg.State.History
--         Mycfg.State.Manifest
--         Mycfg.State.Snapshot
--         Mycfg.State.Store
--         Mycfg.Utils.Hash
--         Mycfg.Utils.Process
--         Mycfg.Utils.Text
--         Mycfg.Utils.Time
--     hs-source-dirs:   src
--     default-language: Haskell2010
--     build-depends:
--         base >=4.14 && <5,
--         aeson,
--         bytestring,
--         containers,
--         cryptonite,
--         directory,
--         prettyprinter,
--         prettyprinter-ansi-terminal,
--         filepath,
--         mtl,
--         optparse-applicative,
--         path,
--         process,
--         random,
--         stm,
--         text,
--         time,
--         toml-parser,
--         transformers,
--         unix,
--         uuid

-- executable saturn
--     main-is:          Main.hs
--     hs-source-dirs:   src
--     default-language: Haskell2010
--     build-depends:
--         base >=4.14 && <5,
--         saturn,
--         text

source-repository head
    type:     git
    location: https://github.com/playfairs/saturn